feat: implement change to openapi
